add rabbitMQ configuration

--- a/Loan_Management_System_API_Task/appsettings.json
+++ b/Loan_Management_System_API_Task/appsettings.json
@@ -13,5 +13,12 @@
     "Issuer": "https://localhost:7007",
     "Audience": "https://localhost:7007"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "RabbitMq": {
+    "HostName": "localhost",
+    "UserName": "admin",
+    "Password": "admin",
+    "VirtualHost": "/"
+  }
 }
