message producer fix

--- a/Loan_Management_System_API_Task/appsettings.json
+++ b/Loan_Management_System_API_Task/appsettings.json
@@ -17,8 +17,8 @@
   
   "RabbitMq": {
     "HostName": "localhost",
-    "UserName": "admin",
-    "Password": "admin",
+    "UserName": "user",
+    "Password": "password",
     "VirtualHost": "/"
   }
 }
